creates a json file if we don't have one and writes tasks there